# forbin-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  README.md  RELEASING.md  USAGE.md
forbin/: __init__.py  cli.py  client.py  config.py  display.py  picker.py  profiles.py  tools.py  utils.py  verbose.py
tests/: conftest.py  test_integration.py  test_main.py  test_migration.py  test_picker.py  test_profiles.py  test_version.py
