[project]
name = "forbin-mcp"
version = "0.1.4"
description = "Interactive CLI tool for testing remote MCP servers - inspired by Colossus: The Forbin Project, where systems learn to communicate"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "fastapi",
    "fastmcp",
    "testing",
    "cli",
    "agentic",
    "ai-tools",
    "forbin"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.24.0",
    "pyperclip>=1.8.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    # Transitive deps pinned to mitigate CVEs flagged by pip-audit. Remove a
    # pin once our direct deps' own constraints catch up to the safe version.
    "authlib>=1.6.11",          # GHSA-jj8c-mmj3-mmgv (via fastmcp)
    "cryptography>=46.0.7",     # CVE-2026-39892 (via httpx → httpcore → ssl)
    "pygments>=2.20.0",         # CVE-2026-4539 (via rich)
    "python-multipart>=0.0.26", # CVE-2026-40347 (via fastmcp)
    "requests>=2.33.0",         # CVE-2026-25645 (via fastmcp → jsonschema-path)
    "starlette>=0.49.1",        # CVE-2025-62727 (via fastmcp)
    "urllib3>=2.6.3",           # CVE-2026-21441 (via requests)
]


[project.urls]
Repository = "https://github.com/chris-colinsky/forbin-mcp"
Issues = "https://github.com/chris-colinsky/forbin-mcp/issues"
Documentation = "https://github.com/chris-colinsky/forbin-mcp/blob/main/README.md"

[project.scripts]
forbin = "forbin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["forbin"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.1.0",
    "black>=26.3.1",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    # Transitive deps pinned to mitigate CVEs flagged by pip-audit (via pre-commit).
    "filelock>=3.20.3",     # CVE-2026-22701
    "virtualenv>=20.36.1",  # CVE-2026-22702
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ["py313"]
